# GEAC

./: .dockerignore  .gitignore  CHALLENGES.md  CLAUDE.md  Cargo.toml  Cross.toml  README.md  TESTING.md  TODO.md  environment.yml  geac.toml.example  requirements.txt  run_coverage_explorer.sh  run_explorer.sh
.github/workflows/: release.yml
app/: coverage_profile.py  geac_config.py  geac_coverage_explorer.py  geac_explorer.py  igv_helpers.py  pipeline_compare_helpers.py  read_context_helpers.py  signature_nmf.py
app/explorer/: __init__.py  data_source.py  filter_state.py  main_table.py  schema.py  tab_context.py
app/tests/: test_coverage_profile.py  test_explorer_shared.py  test_fs_stratified_spectrum.py  test_geac_config.py  test_igv_helpers.py  test_per_read_warning.py  test_pipeline_compare_helpers.py  test_read_context_helpers.py  test_recompute_vaf.py  test_signature_nmf.py
docker/: Dockerfile  Dockerfile.prebuilt  entrypoint.sh
docs/: per-read-filter-audit.md  provenance.md
homebrew/Formula/: geac.rb
schema/: geac_schema.json
scripts/: build_docker.sh  collect_cohort.sh  make_manifest.sh  setup.sh
src/: cli.rs  cohort.rs  gene_annotations.rs  gnomad.rs  main.rs  merge.rs  normal.rs  pon.rs  progress.rs  qc.rs  record.rs  repeat.rs  targets.rs  track.rs  variants_tsv.rs  vcf.rs
src/bam/: builders.rs  indel.rs  mod.rs  pileup.rs  ref_utils.rs
src/coverage/: mod.rs
tests/: integration.rs
wdl/: geac_annotate_normal.wdl  geac_annotate_pon.wdl  geac_cohort.wdl  geac_cohort_loci.wdl  geac_collect.wdl  geac_coverage.wdl  geac_merge.wdl  geac_qc.wdl
(+27 files in other folders)
